// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get android pricing tier get monthly android tier: monthly-android-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "com.streetwriters.notesnook.sub.mo.tier3",
}
`;

exports[`get android pricing tier get yearly android tier: yearly-android-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "com.streetwriters.notesnook.sub.yr.tier3",
}
`;

exports[`get ios pricing tier get monthly ios tier: monthly-ios-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "com.streetwriters.notesnook.sub.mo.tier3",
}
`;

exports[`get ios pricing tier get yearly ios tier: yearly-ios-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "com.streetwriters.notesnook.sub.yr.tier3",
}
`;

exports[`get monthly price: monthly-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "price": Any<Number>,
}
`;

exports[`get undefined price: monthly-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "price": Any<Number>,
}
`;

exports[`get web pricing tier get monthly web tier: monthly-web-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "763943",
}
`;

exports[`get web pricing tier get yearly web tier: yearly-web-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "sku": "763945",
}
`;

exports[`get yearly price: yearly-pricing 1`] = `
Object {
  "country": Any<String>,
  "countryCode": Any<String>,
  "discount": Any<Number>,
  "price": Any<Number>,
}
`;
